--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 3rem;
   text-align: center;
 }
 
@@ -19,25 +19,30 @@ nav {
 }
 
 nav > a {
-  padding: 0.4rem;
+  display: inline-block;  
+  padding: 0.5rem;
   margin-right: 0.5em;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5) ;
-  border: 0.1rem solid #ccc ;
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0.7em;
+  text-align: center;
   color: white;
+  filter: drop-shadow(0 0 0.15em black);
+
 }
 
-nav > a:hover, .active{
+nav > a:hover,
+nav > a.active {
   background-color:  rgba(255, 255, 255);
   transition: all 0.1s ease;
-  filter: drop-shadow(0 0 0.15em white);
+  filter: drop-shadow(0 0 0.15em black);
   color: black;
   width: auto;
   opacity: 1;
+  transition: all 0.2s ease;
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.4); 
 
+  
 }
-
 
 
 
