help im dying, i tried to add vercel.json, but i hope it works, with anoher image type of maoamo

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ nav > a.active {
 
 .valentine-background{
   background: 
-    url('./assets/maomao.PNG'),
+    url('./assets/maomao.webp'),
     url('./assets/masterjinshi.PNG'),
     #FBF7F5;
   background-position: 0% 100%, 100% 100%;  
