--- a/src/clickable.module.css
+++ b/src/clickable.module.css
@@ -5,7 +5,7 @@
   user-select: none;
   margin-top: 2rem;
   user-select: none;
-    text-align: center;
+  text-align: center;
 }
 
 .yesBtn {
@@ -18,6 +18,7 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+z-index: 1;
   text-align: center;
 }
 
@@ -25,11 +26,12 @@
   background-color: red;
   color: white;
   padding: 10px;
+z-index: 1;
   width: 150px;
   height: 50px;
   font-size: 1.1rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-    text-align: center;
+    text-align: center
 }
