--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,19 @@
   padding: 3rem;
 }
 
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh; /* ensure it fits screen height */
+}
+
 nav {
   position: fixed;
   display: flex;
@@ -101,17 +114,71 @@ nav > a.active {
 }
 */
 
-@media (max-width: 768px) {
-  .maomao-background {
-    left: 0vw; 
-    width: 100vw;            /* fixed width so it doesn’t shrink */
-    max-width: 10000px;
 
-  }
 
+
+/* iPad Pro & down (Landscape) */
+@media (max-width: 1366px) {
+  .maomao-background,
   .jinshi-background {
-    right: 0vw;
-    width: 100vw;            /* fixed width so it doesn’t shrink */
+    max-height: 55vh;
+     max-width: 10000px;
+  }
+}
+
+@media (max-height: 834px) {
+  .maomao-background,
+  .jinshi-background {
+    max-height: 70vh;
+     max-width: 10000px;
+  }
+}
+
+/* iPad Mini, Air (Portrait) */
+@media (max-width: 1024px) {
+  .maomao-background,
+  .jinshi-background {
+    max-height: 50vh;
+    width: 70vw;
+     max-width: 10000px;
+  }
+}
+
+@media (max-height: 768px) {
+  .maomao-background,
+  .jinshi-background {
+    max-height: 70vh;
+     max-width: 10000px;
+  }
+}
+
+/* Small tablets & phones in landscape */
+@media (max-width: 768px) {
+  .maomao-background,
+  .jinshi-background {
+    width: 80vw;
+    max-height: 42vh;
     max-width: 10000px;
+  }
+}
+
+/* Phones (portrait) */
+/* Small phones (e.g. iPhone SE) */
+@media (max-width: 360px) {
+  
+}
+
+/* Most phones (iPhone 12, Androids, etc.) */
+@media (max-width: 430px) {
+
+}
+
+/* Bigger phones or small tablets in portrait */
+@media (max-width: 480px) {
+  .maomao-background,
+  .jinshi-background {
+    width: 90vw;
+    max-height: 35vh;
+     max-width: 10000px;
   }
 }
