--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,12 @@
   padding: 3rem;
 }
 
-body, html {
+html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 main {
@@ -69,6 +71,7 @@ nav > a.active {
   left: 0;
   width: 850px;            /* fixed width so it doesn’t shrink */
   max-width: 10000px;
+  max-height: 60vh;
   height: auto;
   transition: left 0.3s ease;
   z-index: 0;
@@ -91,6 +94,7 @@ nav > a.active {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   overflow: hidden;
   margin-bottom: 2rem; /* add space below image */
   transform:translate(0%, -15%) 
@@ -163,22 +167,49 @@ nav > a.active {
 }
 
 /* Phones (portrait) */
-/* Small phones (e.g. iPhone SE) */
-@media (max-width: 360px) {
-  
-}
 
 /* Most phones (iPhone 12, Androids, etc.) */
 @media (max-width: 430px) {
-
-}
-
-/* Bigger phones or small tablets in portrait */
-@media (max-width: 480px) {
-  .maomao-background,
-  .jinshi-background {
-    width: 90vw;
-    max-height: 35vh;
-     max-width: 10000px;
+  .image-wrapper {
+    height: 200px; /* or whatever fits your largest image */
+    width: 80vw; /* or whatever fits your largest image */
+  }
+  .subtitle{
+    transform: translate(0,0);
   }
 }
+  
+  /* Bigger phones or small tablets in portrait */
+  @media (max-width: 480px) {
+    .maomao-background,
+    .jinshi-background {
+      width: 90vw;
+      max-height: 35vh;
+      max-width: 10000px;
+    }
+
+  }
+
+
+  @media (max-width: 390px) {
+  .image-wrapper {
+    height: 200px; /* or whatever fits your largest image */
+    width: 80vw; /* or whatever fits your largest image */
+  }
+  .subtitle{
+    transform: translate(-5%,0);
+  }
+
+  }
+  
+  
+  /* Small phones (e.g. iPhone SE) */
+  @media (max-width: 360px) {
+  .image-wrapper {
+    height: 200px; /* or whatever fits your largest image */
+    width: 80vw; /* or whatever fits your largest image */
+  }
+  .subtitle{
+    transform: translate(-10%,0);
+  }
+  }
